ros2_docker_ws/ur5_ws/log/build_2026-02-04_11-00-11/ur5_motion_planning/stdout_stderr.log
Consolidate compiler generated dependencies of target ur5_plan_and_analyze_node
[ 50%] Building CXX object CMakeFiles/ur5_plan_and_analyze_node.dir/src/ur5_plan_and_analyze_node.cpp.o
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp: In function ‘int main(int, char**)’:
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:486:3: error: ‘au’ was not declared in this scope
  486 |   au
      |   ^~
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:486:5: error: expected ‘}’ at end of input
  486 |   au
      |     ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:83:33: note: to match this ‘{’
   83 | int main(int argc, char** argv) {
      |                                 ^
gmake[2]: *** [CMakeFiles/ur5_plan_and_analyze_node.dir/build.make:76: CMakeFiles/ur5_plan_and_analyze_node.dir/src/ur5_plan_and_analyze_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/ur5_plan_and_analyze_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
